<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="paovalle.uninacampus.UI.LoginActivity">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/nomeSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/TextNome"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/nome"
                            android:textSize="30sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Cognome">

                        <AutoCompleteTextView
                            android:id="@+id/CognomeText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textSize="30sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/MatricolaText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="Matricola"
                            android:textSize="30sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text=""
                            android:textSize="30sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="Password"
                            android:hint="@string/password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="30sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <AutoCompleteTextView
                            android:id="@+id/textViewCDL"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:editable="false"
                            android:hint="@string/nome"
                            android:text="LM-ING-INF"
                            android:textSize="30sp" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/confirmButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="0dp"
                        android:text="@string/conferma"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/buttomBack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/indietro"
                        android:textSize="30sp" />

                </LinearLayout>
            </ScrollView>

        </ScrollView>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="208dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

</LinearLayout>
